Nop bai tap buoi 7

--- a/Day_7/Menu/style.css
+++ b/Day_7/Menu/style.css
@@ -71,6 +71,10 @@ img:hover {
     padding: 30px 25px;
 }
 
+.menu > li:hover .menu-icon::after {
+    content: "\f106";
+}
+
 .menu li:hover .sub-menu{
     display: block;
 }
