--- a/HTML-CSS-FINAL/assets/css/responsive.css
+++ b/HTML-CSS-FINAL/assets/css/responsive.css
@@ -14,6 +14,70 @@
         display: block;
         border: none;
     }
+
+    /* Artist Cards Grid */
+    .artist-cards-grid {
+        margin-top: 40px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+
+    .artist-cards-grid .artist-card-item {
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+        column-gap: 20px
+    }
+
+    .artist-card-item .ranking {
+        top: 13px;
+        left: 13px;
+    }
+
+    .artist-card-item .artist-info {
+        margin-top: 0;
+        text-align: left;
+        flex: 1;
+    }
+
+    .artist-card-item .additional-info {
+        justify-content: flex-start;
+        column-gap: 5px;
+    }
+
+
+
+    /* Browse Category */
+    .browse-categories .container {
+        padding: 40px 0;
+    }
+
+    .browse-categories .section-headline {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .browse-categories .category-card-grid {
+        margin-top: 40px;
+    }
+
+    .browse-categories .category-card-grid .image-placeholder {
+        width: 150px;
+    }
+
+    .browse-categories .category-card-grid .name-card {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .browse-categories .category-card-grid .collection-name {
+        padding: 20px 20px 25px;
+    }
+
+
+
+
+
 }
 
 
@@ -83,6 +147,7 @@
         flex-wrap: wrap;
     }
 
+
     /*Top Creators------------------------------------------------------------------------*/
 
     .top-creators .container {
@@ -102,7 +167,241 @@
         font-size: 1.6rem;
         line-height: 1.4;
     }
+
+    .artist-cards-grid {
+        margin-top: 40px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .artist-cards-grid .artist-card-item {
+        height: 100px;
+        display: flex;
+        justify-content: space-between;
+        column-gap: 20px
+    }
+
+    .artist-card-item .ranking {
+        top: 13px;
+        left: 13px;
+    }
+
+    .artist-card-item .artist-info {
+        margin-top: 0;
+        text-align: left;
+        flex: 1;
+    }
+
+    .artist-card-item .additional-info {
+        justify-content: flex-start;
+        column-gap: 5px;
+    }
+
+    .artist-card-item .total-sales, .artist-card-item .number {
+        flex: 1;
+    }
+
+    .artist-cards-grid .artist-avatar {
+        width: 60px;
+    }
+
+
+    /*Browse Categories------------------------------------------------------------------------*/
+
+    /*.browse-categories .container {*/
+    /*    padding: 40px 0;*/
+    /*}*/
+
+    /*.browse-categories .section-headline {*/
+    /*    font-size: 2.8rem;*/
+    /*    line-height: 1.4;*/
+    /*}*/
+
+    /*.browse-categories .category-card-grid {*/
+    /*    margin-top: 40px;*/
+    /*}*/
+
+    /*.browse-categories .category-card-grid .image-placeholder {*/
+    /*    width: 150px;*/
+    /*}*/
+
+    /*.browse-categories .category-card-grid .name-card {*/
+    /*    font-size: 1.6rem;*/
+    /*    line-height: 1.4;*/
+    /*}*/
+
+    /*.browse-categories .category-card-grid .collection-name {*/
+    /*    padding: 20px 20px 25px;*/
+    /*}*/
+
+    .browse-categories .category-card-item:nth-of-type(5) .name-card::after, .browse-categories .category-card-item:nth-of-type(6) .name-card::after, .browse-categories .category-card-item:nth-of-type(7) .name-card::after {
+        content: '\00a0'; /* Khoảng trắng space */
+        display: block;
+    }
+
+
+    /*Discover More NFTs------------------------------------------------------------------------*/
+    .discover .container {
+        padding: 40px 0 80px;
+    }
+
+    .discover .heading {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .discover .subhead {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .discover .nft-cards-row {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    /*Magic Mashrooms (NFT Highlight)------------------------------------------------------------------------*/
+    .magic .container {
+        max-width: 100%;
+        padding: 60px 0;
+    }
+
+    .magic .nft-frame {
+        max-width: 670px;
+        margin: 0 auto
+    }
+
+    .magic .title {
+        font-size: 3.8rem;
+        line-height: 1.2;
+    }
+
+
+    /*How it works------------------------------------------------------------------------*/
+    .works .container {
+        padding: 40px 0;
+    }
+
+    .works .section-headline .title {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .works .section-headline .desc {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .works .card-row {
+        margin-top: 40px;
+    }
+
+    .works .info-card .icon {
+        width: 160px;
+    }
+
+    .works .card-row .info-card {
+        padding: 10px 20px 30px 20px;
+    }
+
+    .works .info-card .sub-title {
+        font-size: 1.6rem;
+        line-height: 1.4;
+        text-align: center;
+    }
+
+    .works .info-card .paragraph {
+        font-size: 1.2rem;
+        line-height: 1.4;
+        text-align: center;
+    }
+
+
+    /*Join------------------------------------------------------------------------*/
+    .join .container {
+        padding: 40px 0 80px;
+    }
+
+    .join .join-frame {
+        column-gap: 30px;
+        padding: 40px 30px;
+        width: 100%;
+        align-items: flex-start;
+
+
+    }
+
+    .join .join-frame .photo {
+        height: 280px;
+        object-fit: cover;
+    }
+
+    .join .content .headline {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .join .content .subhead {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .join .subscribe-form {
+        width: 100%;
+        height: 46px;
+        border-radius: 20px;
+        position: relative;
+    }
+
+    .join .subscribe-form input::placeholder {
+        color: #2B2B2B;
+    }
+
+    .join .subscribe-form .subscribe-btn {
+        position: absolute;
+        top: calc(100% + 16px);
+        width: 100%;
+        height: 46px;
+    }
+
+
+    /*Footer-----------------------------------------------------------------------*/
+     footer .container {
+         padding: 40px 0;
+         max-width: 100%;
+     }
+
+    .footer-frame {
+        padding: 0 0;
+        max-width: 690px;
+        margin: 0 auto;
+    }
+
+    footer .footer-info {
+        flex-direction: column;
+        row-gap: 30px;
+    }
+
+    footer .additional-info {
+        width: 100%;
+    }
+
+    .subscribe-form-and-info > .desc {
+        width: 100%;
+    }
+
+    footer .subscribe-form input::placeholder {
+        color: #2B2B2B;
+    }
+
+    footer .no-copy-right {
+        padding: 0 0;
+        max-width: 690px;
+        margin: 49px auto 0;
+    }
+
+
 }
+
+
 
 
 /* * * Thiet bi Mobile: @media screen and (max-width: 767px) * * */
@@ -114,4 +413,362 @@
     .header {
         padding: 40px 30px;
     }
+
+
+    /*----Hero----------------------------------------------------*/
+    .hero .container {
+        flex-direction: column;
+    }
+
+    .hero .heroText-and-buttons {
+        width: 100%;
+    }
+
+    .hero .headline-and-subhead .title {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .hero .headline-and-subhead .desc {
+        margin-top: 10px;
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .highlighted-nft {
+        display: none;
+    }
+
+    .highlighted-nft-mobile {
+        width: 100%;
+        margin-top: 40px;
+        display: block !important;
+    }
+
+    .hero .highlighted-nft-mobile img {
+        display: block;
+        max-width: 100%; /* Đặt max-width thì ảnh sẽ có thể thu nhỏ lại */
+    }
+
+    .hero .highlighted-nft-mobile .caption {
+        padding: 20px;
+        background: #3B3B3B;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    .hero .highlighted-nft-mobile .title {
+        font-weight: 600;
+        font-size: 2.2rem;
+        line-height: 1.4;
+        text-transform: capitalize;
+        color: #fff;
+    }
+
+    .hero .highlighted-nft-mobile .content {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+    }
+
+    .hero .highlighted-nft-mobile .avatar-desc {
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 1.4;
+        color: #fff;
+        margin-left: 12px;
+    }
+
+    .hero .hero-btn {
+        width: 100%;
+        margin-top: 40px;
+    }
+
+    .hero .additional-info {
+        margin-top: 40px;
+    }
+
+    .hero .additional-info .data {
+        font-size: 2.2rem;
+        line-height: 1.6;
+    }
+
+    .hero .additional-info .desc {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    /*----Trending----------------------------------------------------*/
+
+    .trending .section-headline .heading {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .trending .section-headline .subhead {
+        font-size: 1.6rem;
+        line-height: 1.4;
+        text-transform: none;
+    }
+
+    .trending .collection-card-row {
+        margin-top: 40px;
+    }
+
+    .trending .collection-card-row .collection-card:nth-of-type(2), .trending .collection-card-row .collection-card:nth-of-type(3) {
+        display: none;
+    }
+
+
+    /*----Top creator----------------------------------------------------*/
+
+    .top-creators .top-creators-btn {
+        display: none;
+    }
+
+    .top-creators .top-creators-btn-mobile {
+        display: flex !important;
+        --width: 247px;
+        background: transparent;
+        border: 2px solid #A259FF;
+        margin-top: 40px;
+    }
+
+    /*----Browse Category----------------------------------------------------*/
+
+    .browse-categories .section-headline {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .browse-categories .category-card-grid {
+        margin-top: 40px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+
+    }
+
+    .browse-categories .container {
+        max-width: 100%;
+        padding: 40px 30px;
+    }
+
+    .discover .container {
+        max-width: 100%;
+        padding: 40px 30px;
+    }
+
+
+    /*----Discover----------------------------------------------------*/
+    .discover .discover-btn {
+        display: none;
+    }
+
+    .discover-btn-mobile {
+        display: flex !important;
+        --width: 247px;
+        background: transparent;
+        border: 2px solid #A259FF;
+        margin-top: 40px;
+    }
+
+    .discover .nft-cards-row {
+        grid-template-columns: repeat(1, 1fr);
+        margin-top: 40px;
+        gap: 20px;
+    }
+
+    /*----Magic----------------------------------------------------*/
+
+    .magic .container {
+        padding: 40px 30px;
+    }
+
+    .magic .nft-frame {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .magic .title {
+        font-size: 3.8rem;
+        line-height: 1.2;
+    }
+
+    .magic .auction-timer {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .magic .magic-btn {
+        display: none;
+    }
+
+    .magic-btn-mobile {
+        display: flex !important;
+        margin-top: 30px;
+        background: #fff;
+        color: #2B2B2B;
+        --width: 100%;
+    }
+
+    /*----Work----------------------------------------------------*/
+
+
+    .works .section-headline .title {
+        font-size: 2.8rem;
+        line-height: 1.4;
+    }
+
+    .works .section-headline .desc {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .works .card-row {
+        margin-top: 40px;
+        flex-direction: column;
+        row-gap: 20px;
+    }
+
+
+    .works .card-row .info-card {
+        display: flex;
+        padding: 20px;
+        align-items: center;
+        justify-content: space-evenly;
+        min-height: 0;
+        column-gap: 20px;
+
+    }
+
+    .works .card-row .icon {
+        width: 100px;
+    }
+
+    .works .info-card .card-details {
+        margin: 0;
+        text-align: left;
+        max-width: 155px;
+    }
+
+    .works .info-card .sub-title {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .works .info-card .paragraph {
+        font-size: 1.2rem;
+        line-height: 1.4;
+    }
+
+
+
+    /*Join*/
+    .join .container {
+        max-width: 100%;
+        padding: 40px 30px;
+    }
+
+    .join .join-frame {
+        width: 100%;
+        padding: 0;
+        flex-direction: column;
+    }
+
+    .join .join-frame .photo {
+        width: 100%;
+        max-height: 255px;
+    }
+
+    .join .join-frame .content {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .join .content .headline {
+        font-size: 2.8rem;
+        line-height: 1.4;
+        width: 80%;
+    }
+
+    .join .content .subhead {
+        font-size: 1.6rem;
+        line-height: 1.4;
+    }
+
+    .join .subscribe-form {
+        width: 100%;
+        height: 46px;
+        border-radius: 20px;
+        padding: 0 20px;
+    }
+
+    .join .subscribe-form input {
+        padding: 0;
+    }
+
+    .join .subscribe-form .subscribe-btn {
+        display: none;
+    }
+
+    .join .subscribe-btn-mobile {
+        display: flex !important;
+        width: 100%;
+        height: 46px;
+        margin-top: 16px;
+    }
+
+    .join .subscribe-form input::placeholder {
+        color: #2B2B2B;
+    }
+
+
+/*Footer*/
+    .footer-frame {
+        padding: 0;
+    }
+
+    footer .footer-info {
+        flex-direction: column;
+        row-gap: 30px;
+    }
+    footer .additional-info {
+        width: 100%;
+        margin-top: 26px;
+    }
+
+    footer .page {
+        margin-top: 20px;
+    }
+
+    footer .subscribe-form-and-info {
+        margin-top: 20px;
+    }
+
+    footer .subscribe-form {
+        width: 100%;
+        height: 46px;
+        border-radius: 20px;
+        padding: 0 20px;
+    }
+
+    footer .subscribe-form input {
+        padding: 0;
+    }
+
+    footer .subscribe-form .subscribe-btn {
+        display: none;
+    }
+
+    footer .subscribe-btn-mobile {
+        display: flex !important;
+        width: 100%;
+        height: 46px;
+        margin-top: 16px;
+    }
+
+    footer .subscribe-form input::placeholder {
+        color: #2B2B2B;
+    }
+
 }
